scripts/kubernetes/geoipfix-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: geoipfix
  labels:
    app: geoipfix
    sha: "${GEOIPFIX_VERSION}"
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: geoipfix
    spec:
      volumes:
        - name: geoipfix-volume
          configMap:
            name: geoipfix-config
        - name: geoipfix-downloader-volume
          emptyDir: {}
      containers:
        - name: geoipfix-downloader
          image: gcr.io/ulule-services/geoipfix-downloader:0.1.2
          imagePullPolicy: Always
          volumeMounts:
            - name: geoipfix-downloader-volume
              mountPath: /usr/share/geoip
        - name: geoipfix
          image: gcr.io/${GCLOUD_PROJECT_ID}/geoipfix:${GEOIPFIX_VERSION}
          imagePullPolicy: Always
          volumeMounts:
          - name: geoipfix-volume
            mountPath: /etc/geoipfix
          - name: geoipfix-downloader-volume
            mountPath: /usr/share/geoip
            readOnly: true
          ports:
          - name: http-server
            containerPort: 3001
          - name: rpc-server
            containerPort: 33001

          readinessProbe:
            httpGet:
              path: /sys/health
              port: 3001

          livenessProbe:
            httpGet:
              path: /sys/health
              port: 3001
