scripts/kubernetes/geoipfix-service.yml
apiVersion: v1
kind: Service
metadata:
  name: geoipfix
  labels:
    app: geoipfix
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: http-server
  selector:
    app: geoipfix
