scripts/kubernetes/geoipfix-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: geoipfix-http
spec:
  backend:
    serviceName: geoipfix
    servicePort: 80
